added more to the list

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -1548,7 +1548,180 @@
                 image: "https://lh3.googleusercontent.com/p/AF1QipMbdr-KLKMyOh4i_CoFxZXgWwLmbn4StL9pAEW6=w400-h266-k-no",
                 description: "Burn Gym is a popular fitness center that offers a range of facilities and services for health and wellness. With state-of-the-art equipment, group classes, and personal training options, it's a great place to achieve your fitness goals. The center provides a motivating environment for individuals looking to stay active and healthy.",
                 rating: "4.7/5"
+            },
+            {
+                id: 83,
+                name: "Palika Market, Sector 19",
+                location: [30.727962038175896, 76.79310685037585],
+                type: "shopping",
+                price: "low",
+                openingHours: "10 AM – 10 PM",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu24Va6b8ALaYEcd0RyS_0JYbmmCUr1QcvSY7wd5VJgPDpVO5tCaC6EKx7FqwAPPHBW3TyMRO61UWzl69v_tKb5gLimAistlpMIN9UCC1-txveX1UzKVsxbnMm_BeqnE5UIbfmg4bg=w400-h531-k-no",
+                description: "Popular budget shopping destination with a variety of shops selling clothes, accessories & electronics.",
+                rating: "4.2/5"
+            },
+            {
+                id: 84,
+                name: "Laptop Market, Sector 20",
+                location: [30.71739191355338, 76.77646341010329],
+                type: "shopping",
+                price: "medium",
+                openingHours: "10 AM – 8 PM",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu11mbBBUVRL22WLTAwfegQZPFw4QYXEaZbWobshJZooyGRC_0NIqnp_CxgXutDcXD-IsnEcg0qRv0dVNq50rnlKoshO0HikU2bXhm5fExsIZQdybeTU-lWcJyA_ryxF3cQ8Ruzm3aGoEuL2=w400-h279-k-no",
+                description: "Popular budget shopping destination with a variety of shops selling laptops, accessories & electronics.",
+                rating: "4.3/5"
+            },
+            {
+                id: 85,
+                name: "Shastri Market, Sector 22",
+                location: [30.733151933192822, 76.77096958430582],
+                type: "shopping",
+                price: "low",
+                openingHours: "9 AM – 8 PM",
+                image: "https://lh3.googleusercontent.com/p/AF1QipPNBf4T_yAkCTH_kM9bMHTtDxK_wirgihBz8_Y-=w400-h300-k-no",
+                description: "Popular budget shopping destination with a variety of shops selling clothes, accessories & electronics.",
+                rating: "4.3/5"
+            },
+            {
+                id: 86,
+                name: "Mobile Market, Sector 22",
+                location: [30.735765356357177, 76.7771583858496],
+                type: "shopping",
+                price: "medium",
+                openingHours: "10:30 AM – 9 PM",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu2NMbsyByVccIWJ7uBSTPJhW7J6Wh7WAe1anNJ-kjAesWZUeLA6OOj9E4dI7UyuKtOi6TxIYgzBCPKENwrSBAmH7Tos_tzxkrJ1yzZYuZ39pE9aGAeZDxnGMrh5h38aQailQtEM=w400-h300-k-no",
+                description: "Popular budget shopping destination with a variety of shops selling mobile phones, accessories & electronics.",
+                rating: "4.1/5"
+            },
+            {
+                id: 87,
+                name: "Capital Photo Store - Everthing related to Cameras, Sector 22",
+                location: [30.735765356357177, 76.7771583858496],
+                type: "shopping",
+                price: "high",
+                openingHours: "10:30 AM – 9 PM",
+                image: "https://lh3.googleusercontent.com/proxy/FYldHrxTA4ODrUJtSB1BDkQuh3x-TxOBWDyH5tBlQ4ivcW6JYZAwS6xH6Poe-VVYc50pk-YyZu7AHK6bIyK5G8wKAtf6kcDw7LDb_ZeR9vOTUzX_S_USWvl3zKPi7JKLeIF-EZvKQ7AnwIS-bDNFNRqahqkGqcVKUlA=w400-h300-k-no",
+                description: "Capital Photo Store is a specialized camera store that offers a wide range of cameras, lenses, and photography accessories. The store is known for its knowledgeable staff who can help customers find the right equipment for their needs. Whether you're a professional photographer or a hobbyist, Capital Photo Store has everything you need to capture stunning images. The store also provides repair services for cameras and lenses. You need to walk towards the end of the shop to find the camera section. Owner is a sardarji who is very helpful.",
+                rating: "4.2/5"
+            },
+            {
+                id: 88,
+                name: "Grain Market, Sector 26 East",
+                location: [30.723331542739203, 76.80802727625128],
+                type: "shopping",
+                price: "low",
+                openingHours: "6 AM – 6 PM",
+                image: "https://lh3.googleusercontent.com/p/AF1QipPTwiXvgOTmgiUv0nIog1fuOw_2IrgiJSjW8dk=w400-h225-k-no",
+                description: "Although every sector has its own shops, Sector 26E serves as the central hub for all the wholesalers and retail stores selling vegetables, grains, pulses, spices, and more.",
+                rating: "4.0/5"
+            },
+            {
+                id: 89,
+                name: "New Motor Market, Sector 28",
+                location: [30.71498538270102, 76.80585410794757],
+                type: "shopping",
+                price: "medium",
+                openingHours: "8 AM – 7 PM, Sunday closed",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMt7W904NfMn7Ze6v-_jjbekZQ4mQv_q6nuqIbZ=w400-h225-k-no",
+                description: "New Motor Market (non branded) is a popular destination for automotive enthusiasts. The market features a variety of shops selling car accessories, spare parts, and services. It's a great place to find everything you need for your vehicle, from tires to electronics.",
+                rating: "4.1/5"
+            },
+            {
+                id: 90,
+                name: "Furniture Market, Sector 53",
+                location: [30.726363332274982, 76.7327909630085],
+                type: "shopping",
+                price: "medium",
+                openingHours: "9 AM – 8 PM",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu2ZhwUmFeB--nqyoYQuwMmQf5ZcFcq7XSojpeDcnMf7ipOKGepyrPXHg8G0QoEv0hAvwxrmivPp4bpRJVFTm5AlUd4FH9fCIpq6WcBO75IZxMpogLaSvtI0RVWWRfZTzGUKV-c=w400-h300-k-no",
+                description: "Furniture Market (non branded) is a popular destination for home furnishings. The market features a variety of shops selling furniture, decor, and accessories. It's a great place to find everything you need to furnish your home, from sofas to dining sets.",
+                rating: "4.1/5"
+            },
+            {
+                id: 91,
+                name: "Second-hand Book Market, Sector 15",
+                location: [30.755048539897764, 76.7771247774201],
+                type: "shopping",
+                price: "low",
+                openingHours: "10:30 AM – 7:30 PM",
+                image: "https://lh3.googleusercontent.com/p/AF1QipONoHPKWKf9A6-L8XbP9nl3kDY54P4T_XWw4GCr=w400-h300-k-no",
+                description: "Second-hand Book Market is a popular destination for book lovers. The market features a variety of shops selling used books, magazines, and more. It's a great place to find rare and out-of-print titles at affordable prices.",
+                rating: "4.0/5"
+            },
+            {
+                id: 92,
+                name: "Fish and Meat Market, Sector 13, Manimajra",
+                location: [30.719079976260492, 76.82204474542196],
+                type: "shopping",
+                price: "medium",
+                openingHours: "9 AM – 9 PM",
+                image: "https://lh3.googleusercontent.com/p/AF1QipN4RmVA_ia47IwTWeFu4x_-y7FFakXm97lM47AR=w400-h300-k-no",
+                description: "The market features a variety of vendors selling fish, chicken, mutton, and more. It's a great place to find ingredients for your meals. The place is crowded and the vendors are not very hygienic, so be careful while buying.",
+                rating: "3.7/5"
+            },
+            {
+                id: 93,
+                name: "Central State Library, Sector 17",
+                location: [30.74033528244366, 76.78485365097563],
+                type: "activities",
+                price: "low",
+                openingHours: "8 AM – 8 PM, Sunday closed",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu2mx8xjNycpLa2VhUjE_JHC4ogJgibqTRMqYMaTyWivO0JHEyFWEF5DQRJTVhMZgxnKa43LRDyzMZeUnq0Xnl8xC9083-Fm5HpgkvYA4-vl962q7wuAQCWRUkWceRLIf1e-1yLCQg=w400-h335-k-no",
+                description: "Central State Library is a well-known library in Chandigarh. The library features a vast collection of books, periodicals, and digital resources. It's a great place for students and researchers to study and access information. The library also hosts events and workshops, making it a hub for learning and knowledge sharing. For issuing books, you need to fill a form and pay a nominal fee. The library is located on the 2nd floor of the building.",
+                rating: "4.5/5"
+            },
+            {
+                id: 94,
+                name: "Divisional Library, Sector 34",
+                location: [30.720035980219127, 76.7673888855014],
+                type: "activities",
+                price: "low",
+                website: "https://chdstatelibrary34.gov.in/",
+                openingHours: "8 AM – 10 PM",
+                image: "https://lh3.googleusercontent.com/p/AF1QipNxPq2s2I9iKclBEXDZjqZoY9coWosqvBpkHq23=w400-h315-k-no",
+                description: "The library features a vast collection of books, periodicals, and digital resources. It's a great place for students and researchers to study and access information. The library also hosts events and workshops, making it a hub for learning and knowledge sharing. For issuing books, you need to fill a form and pay a nominal fee.",
+                rating: "4.4/5"
+            },
+            {
+                id: 95,
+                name: "Boss Rides, Sector 82, SAS Nagar",
+                location: [30.656170580860753, 76.72950988111037],
+                type: "shopping",
+                price: "high",
+                openingHours: "10:30 AM – 7:00 PM",
+                website: "https://www.bossrides.in/",
+                image: "https://lh3.googleusercontent.com/p/AF1QipOoYMGFyee3J7CRXZIoIA7c6Z4yf1qAOul0i5GM=w400-h711-k-no",
+                description: "Boss Rides is a specialized bike store that offers a wide range of motorcycles, accessories, and gear. The store is known for its knowledgeable staff who can help customers find the right bike for their needs. Whether you're a casual rider or a serious biker, Boss Rides has everything you need to enjoy your ride.",
+                rating: "4.5/5"
+            },
+            {
+                id: 96,
+                name: "Bikeformers, Sector 82, SAS Nagar",
+                location: [30.655484239886803, 76.72775352776867],
+                type: "shopping",
+                price: "high",
+                website: "https://bikeformers.com/",
+                openingHours: "10:30 AM – 7:30 PM",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMt08yovzyL8NSx-81E_netuf-Y3ju6eru7RYPO=w400-h225-k-no",
+                description: "Bikeformers is a specialized bike store that offers a wide range of motorcycles, accessories, and gear. The store is known for its knowledgeable staff who can help customers find the right bike for their needs. Whether you're a casual rider or a serious biker, Bikeformers has everything you need to enjoy your ride.",
+                rating: "5/5"
+            },
+            {
+                id: 97,
+                name: "The Laugh Club, Sector 26",
+                location: [30.72604869731483, 76.80506190514416],
+                type: "activities",
+                price: "medium",
+                website: "http://laughclub.in/",
+                openingHours: "10 AM – 11:30 PM",
+                image: "https://lh3.googleusercontent.com/p/AF1QipPbctE79lrkmC9qmcMIhnJ8CSyidhclPyrVQ1G-=w400-h711-k-no",
+                description: "The Laugh Club is a popular comedy venue that hosts stand-up shows and events featuring local and national comedians. The club provides a fun and entertaining atmosphere for comedy lovers. It's a great place to enjoy a night of laughter and entertainment with friends.",
+                rating: "4.5/5"
             }
+
+
+
+
 
         ];
 
