added 2 more to the list.

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -1717,6 +1717,26 @@
                 image: "https://lh3.googleusercontent.com/p/AF1QipPbctE79lrkmC9qmcMIhnJ8CSyidhclPyrVQ1G-=w400-h711-k-no",
                 description: "The Laugh Club is a popular comedy venue that hosts stand-up shows and events featuring local and national comedians. The club provides a fun and entertaining atmosphere for comedy lovers. It's a great place to enjoy a night of laughter and entertainment with friends.",
                 rating: "4.5/5"
+            },
+            {
+                id: 98,
+                name: "Tagore Theater, Sector 18",
+                location: [30.733109613174914, 76.78964560386925],
+                type: "activities",
+                price: "medium",
+                image: "https://lh3.googleusercontent.com/p/AF1QipNdDPFEfq4tWlNCfuwTsUY4nkCT8J-OPvyya6rL=w400-h225-k-no",
+                description: "Tagore Theater is a renowned cultural venue that hosts a variety of performances, including plays, music concerts, and dance shows. The theater features a spacious auditorium and state-of-the-art facilities. It's a great place to experience the arts and enjoy live performances in Chandigarh.",
+                rating: "4.6/5"
+            },
+            {
+                id: 99,
+                name: "Punjab Kala Bhawan, Sector 16",
+                location: [30.748327320739904, 76.78158404793308],
+                type: "activities",
+                price: "medium",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu2ENKThCWbZekpoOR69OwBWCTgGqQac0OioFI3Bz5qgp786nfw1E9D64yXj2rbwy-GfM4LkOCQT-Gh951gtG0WaebziEZ7_zMy_Jp3v0nc5-U70rDJKX_DUL7Mk9zpRjd13619G8Q=w400-h300-k-no",
+                description: "Punjab Kala Bhawan is a cultural center that promotes the arts and culture of Punjab. The venue hosts a variety of events, including art exhibitions, music performances, and dance shows. It's a great place to experience the rich cultural heritage of Punjab and enjoy artistic performances.",
+                rating: "4.6/5"
             }
 
 
