updated meta tags

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -4,10 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Primary Meta Tags -->
+    <title>Chandigarh Tourist Map | Explore the City Beautiful</title>
+    <meta name="title" content="Chandigarh Tourist Map | Explore the City Beautiful">
     <meta name="description"
         content="Explore Chandigarh & Tricity with our interactive map! Find top restaurants, cafes, museums, tourist spots, and hidden gems. Perfect for travelers and locals to discover the best places in Chandigarh, Mohali & Panchkula. Trusted by Reddit and Quora users.">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ravzzy.com/app/chandigarh-tourist-map/home.html">
+    <meta property="og:title" content="Chandigarh Tourist Map | Explore the City Beautiful">
+    <meta property="og:description"
+        content="Discover top tourist spots in Chandigarh with our user-friendly interactive map. Navigate like a local.">
+    <meta property="og:image" content="https://www.ravzzy.com/imgs/chd-tourist-map.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.ravzzy.com/app/chandigarh-tourist-map/home.html">
+    <meta property="twitter:title" content="Chandigarh Tourist Map | Explore the City Beautiful">
+    <meta property="twitter:description"
+        content="Use our interactive map to explore the best of Chandigarh – from gardens and monuments to food and culture.">
+    <meta property="twitter:image" content="https://www.ravzzy.com/imgs/chd-tourist-map.jpg">
+
+    <!-- Additional Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"
+        content="Chandigarh map, tourist attractions, Chandigarh tourism, City Beautiful, travel guide, things to do in Chandigarh">
+    <meta name="author" content="Ravzzy">
+
     <link rel="stylesheet" href="/css/navbar.css">
-    <title>Explore Chandigarh Tricity with Our Interactive Map</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VS2WHLJQNE"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -553,7 +577,7 @@
     </div> -->
 
     <!-- Heatmap Legend -->
-   <!-- <div class="map-legend heatmap-legend" id="heatmap-legend" style="display: none;">
+    <!-- <div class="map-legend heatmap-legend" id="heatmap-legend" style="display: none;">
         <h4>Heatmap Intensity</h4>
         <div><i style="background: blue;"></i> Low</div>
         <div><i style="background: cyan;"></i> Medium</div>
