--- a/app/speedtest/home.html
+++ b/app/speedtest/home.html
@@ -4,6 +4,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Basic Meta Tags -->
+  <meta name="description"
+    content="Test your internet speed instantly with Ravzzy Speed Test. Get accurate results for download, upload, and ping – free and browser-based.">
+  <meta name="keywords"
+    content="internet speed test, Ravzzy speed test, broadband speed, ping test, download speed, upload speed, wifi test, network speed check">
+  <meta name="author" content="Ravzzy">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Internet Speed Test – Fast & Accurate | Ravzzy">
+  <meta property="og:description"
+    content="Get instant and reliable internet speed results with Ravzzy Speed Test. No downloads, just quick browser-based testing.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.ravzzy.com/app/speedtest/home.html">
+  <meta property="og:image" content="https://www.ravzzy.com/imgs/speed-test-icon.webp">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Internet Speed Test – Fast & Accurate | Ravzzy">
+  <meta name="twitter:description"
+    content="Check your internet speed for free with Ravzzy Speed Test – fast, accurate, and browser-friendly.">
+  <meta name="twitter:image" content="https://www.ravzzy.com/imgs/speed-test-icon.webp">
+
   <link rel="stylesheet" href="/app/speedtest/speed-test.css">
   <link rel="stylesheet" href="/css/sidebar.css">
   <link rel="stylesheet" href="/css/navbar.css">
