--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
 	<link rel="stylesheet" href="./css/sidebar.css">
 	<link rel="stylesheet" href="./css/navbar.css">
 	<title>Ravzzy</title>
+	<!-- Primary Meta Tags -->
+	<meta name="title" content="Ravzzy's Digital Garage">
+	<meta name="description"
+		content="Ravzzy builds visually stunning, high-performance websites that blend design, animation, and interactivity to create unforgettable digital experiences.">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://www.ravzzy.com/">
+	<meta property="og:title" content="Ravzzy's Digital Garage">
+	<meta property="og:description"
+		content="Ravzzy builds visually stunning, high-performance websites that blend design, animation, and interactivity to create unforgettable digital experiences.">
+	<meta property="og:image" content="https://www.ravzzy.com/imgs/male276.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://www.ravzzy.com/">
+	<meta property="twitter:title" content="Ravzzy's Digital Garage">
+	<meta property="twitter:description"
+		content="Ravzzy builds visually stunning, high-performance websites that blend design, animation, and interactivity to create unforgettable digital experiences.">
+	<meta property="twitter:image" content="https://www.ravzzy.com/imgs/male276.png">
+
+	<!-- Favicon -->
+	<link rel="icon" type="image/png" href="./imgs/favicon.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
 		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -134,8 +157,8 @@
 	</section>
 	<div class="social-handle">
 		<a href="https://github.com/ravzzy" target="_blank">
-            <i class="fa-brands fa-github"></i>
-        </a>
+			<i class="fa-brands fa-github"></i>
+		</a>
 		<a href="https://www.instagram.com/swiftwindwalker" target="_blank">
 			<i class="fa-brands fa-instagram"></i>
 		</a>
@@ -149,8 +172,8 @@
 			<i class="fa-brands fa-youtube"></i>
 		</a>
 		<a href="https://medium.com/@ravzzy" target="_blank">
-            <i class="fa-brands fa-medium"></i>
-        </a>
+			<i class="fa-brands fa-medium"></i>
+		</a>
 	</div>
 	<!--<div class="avatars">
 			<section>
