--- a/social.html
+++ b/social.html
@@ -5,6 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social</title>
+    <!-- Primary Meta Tags -->
+    <title>Ravzzy Social — Behind the Scenes, Creators & Community</title>
+    <meta name="title" content="Ravzzy Social — Behind the Scenes, Creators & Community">
+    <meta name="description"
+        content="Explore Ravzzy’s social side — from behind-the-scenes creative stories to collaborations, motion design reels, and community moments.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ravzzy.com/social.html">
+    <meta property="og:title" content="Ravzzy Social — Behind the Scenes, Creators & Community">
+    <meta property="og:description"
+        content="Explore Ravzzy’s social side — from behind-the-scenes creative stories to collaborations, motion design reels, and community moments.">
+    <meta property="og:image" content="https://images.hdqwalls.com/wallpapers/bella-hadid-kawasaki-ninja-photoshoot-monochrome-dl.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.ravzzy.com/social.html">
+    <meta property="twitter:title" content="Ravzzy Social — Behind the Scenes, Creators & Community">
+    <meta property="twitter:description"
+        content="Explore Ravzzy’s social side — from behind-the-scenes creative stories to collaborations, motion design reels, and community moments.">
+    <meta property="twitter:image" content="https://images.hdqwalls.com/wallpapers/bella-hadid-kawasaki-ninja-photoshoot-monochrome-dl.jpg">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./imgs/favicon.png">
+
     <link rel="stylesheet" href="/css/sidebar.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
